PROJECT(Base)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

set (PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

INCLUDE(../dependencies.cmake)

# Sources:
SET(Base_library_SRCS
  ${PROJECT_SOURCE_DIR}/utils.cpp
)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})
INCLUDE_DIRECTORIES(${PROJECT_INCLUDE_DIR})

# actual target:
ADD_LIBRARY(${PROJECT_NAME} STATIC ${Base_library_SRCS})

# add install target:
INSTALL(TARGETS Base DESTINATION lib)
